--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tapnow-studio",
   "private": true,
-  "version": "3.8.3-rc5",
+  "version": "3.8.3-rc6",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,12 +11,14 @@
   "dependencies": {
     "dompurify": "^3.0.8",
     "file-saver": "^2.0.5",
+    "i18next": "^23.12.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
     "marked": "^12.0.0",
     "openai": "^6.16.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
